Add register page

--- a/Uonic.Ionic/src/pages/login/login.html
+++ b/Uonic.Ionic/src/pages/login/login.html
@@ -34,6 +34,6 @@
 
 <ion-footer>
     <ion-toolbar text-center>
-        Don't have an account? <strong>Sign up here</strong>.
+        Don't have an account? <strong (click)="goToRegisterPage()">Sign up here</strong>.
     </ion-toolbar>
 </ion-footer>
