Change username to email on login form

--- a/Uonic.Ionic/src/pages/login/login.html
+++ b/Uonic.Ionic/src/pages/login/login.html
@@ -7,7 +7,7 @@
 <ion-content padding text-center>
     <ion-list>
         <ion-item>
-            <ion-input type="text" placeholder="Username"></ion-input>
+            <ion-input type="text" placeholder="Email"></ion-input>
         </ion-item>
         <ion-item>
             <ion-input type="password" placeholder="Password"></ion-input>
