--- a/Uonic.Ionic/src/pages/register/register.html
+++ b/Uonic.Ionic/src/pages/register/register.html
@@ -9,10 +9,7 @@
 <ion-content padding>
     <ion-list>
         <ion-item>
-            <ion-input type="email" placeholder="Email address"></ion-input>
-        </ion-item>
-        <ion-item>
-            <ion-input type="text" placeholder="Username"></ion-input>
+            <ion-input type="email" placeholder="Email"></ion-input>
         </ion-item>
         <ion-item>
             <ion-input type="password" placeholder="Password"></ion-input>
