Add name fields to the registration form

--- a/Uonic.Ionic/src/pages/register/register.html
+++ b/Uonic.Ionic/src/pages/register/register.html
@@ -9,6 +9,12 @@
 <ion-content padding>
     <ion-list>
         <ion-item>
+            <ion-input type="text" placeholder="First name"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-input type="text" placeholder="Surname"></ion-input>
+        </ion-item>
+        <ion-item>
             <ion-input type="email" placeholder="Email"></ion-input>
         </ion-item>
         <ion-item>
