--- a/Uonic.Ionic/src/pages/register/register.html
+++ b/Uonic.Ionic/src/pages/register/register.html
@@ -9,17 +9,21 @@
 <ion-content padding>
     <ion-list>
         <ion-item>
-            <ion-input type="text" placeholder="First name"></ion-input>
+            <ion-input type="text" placeholder="First name" [(ngModel)]="model.firstName" required>
+            </ion-input>
         </ion-item>
         <ion-item>
-            <ion-input type="text" placeholder="Surname"></ion-input>
+            <ion-input type="text" placeholder="Surname" [(ngModel)]="model.surname" required>
+            </ion-input>
         </ion-item>
         <ion-item>
-            <ion-input type="email" placeholder="Email"></ion-input>
+            <ion-input type="email" placeholder="Email" [(ngModel)]="model.email" required>
+            </ion-input>
         </ion-item>
         <ion-item>
-            <ion-input type="password" placeholder="Password"></ion-input>
+            <ion-input type="password" placeholder="Password" [(ngModel)]="model.password" required minlength="8">
+            </ion-input>
         </ion-item>
     </ion-list>
-    <button ion-button block>Register</button>
+    <button ion-button block (click)="register()">Register</button>
 </ion-content>
