--- a/Uonic.Ionic/src/pages/login/login.html
+++ b/Uonic.Ionic/src/pages/login/login.html
@@ -7,13 +7,15 @@
 <ion-content padding text-center>
     <ion-list>
         <ion-item>
-            <ion-input type="text" placeholder="Email"></ion-input>
+            <ion-input type="email" placeholder="Email" [(ngModel)]="model.username" required>
+            </ion-input>
         </ion-item>
         <ion-item>
-            <ion-input type="password" placeholder="Password"></ion-input>
+            <ion-input type="password" placeholder="Password" [(ngModel)]="model.password" required>
+            </ion-input>
         </ion-item>
     </ion-list>
-    <button ion-button block>Login</button>
+    <button ion-button block (click)="logIn()">Log In</button>
     <p>Forgot your password?</p>
 
     <div class="hr"><span>OR</span></div>
