--- a/Ionic.App/src/pages/home/home.html
+++ b/Ionic.App/src/pages/home/home.html
@@ -1,7 +1,10 @@
 <ion-header>
     <ion-navbar>
+        <button ion-button menuToggle icon-only>
+            <ion-icon name="menu"></ion-icon>
+        </button>
         <ion-title>
-            Ionic Blank
+            Uonic
         </ion-title>
     </ion-navbar>
 </ion-header>
